--- a/example3.html
+++ b/example3.html
@@ -1,1 +1,260 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        :root {
+            font-size: 20px;
+        }
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            outline: 2px solid red;
+        }
+        h1{
+            display: block;
+        }
+        div,nav{
+            /* margin-bottom: 10px; */
+            /* border: 2px solid red; */
+        }
+        .divEjemplo{
+            display: inline-block;
+            width: 100px;
+            background-color: yellow;
+        }
+        a{
+            background-color: green;
+        }
 
+        #nav3 a{
+            height: 50px;
+            width: 150px;
+            display: inline-block;
+        }
+
+        #miDiv{
+            min-height: 100px;
+            max-height: 200px;
+            width: 100px;
+            background-color: red;
+            /* border: 5px solid black; */
+            /* border-width: 5px;
+            border-style: dotted;
+            border-color: blue; */
+            /* margin: 10px; */
+            /* margin: 10px 20px; */
+            /* margin: 10px 20px 30px; */
+
+        }
+    </style>
+</head>
+<body>
+    <!-- <div style="width: 500px;">
+        <p style="width: 30%;">Soy un parrafo</p>
+    </div>
+    
+    <h1 style="font-size: 30px;">Titulo <span style="font-size: 2em;">1</span></h1>
+    <p style="font-size: 2rem;">Soy otro parrafo</p>
+    <div style="width: 300px;height: 300px;background-color: orange;padding: 20px;border: 10px solid black;">        
+        <div style="width: 100%;height: 100%;background-color: blue;">        
+        </div> -->
+        <!-- Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ea, nemo magnam quos, ipsam, nobis quo omnis facilis minima ab harum itaque? Praesentium explicabo amet tenetur placeat eveniet nihil laudantium? -->
+    <!-- </div>
+    <div id="miDiv">
+        1
+    </div> -->
+    <div style="background-color: aquamarine;">
+        Hola
+    </div>
+    <div style="background-color: aquamarine;">
+        Hola
+    </div>
+    <div style="background-color: aquamarine;">
+        Hola
+    </div>
+    <nav style="background-color: blue;">
+        <a href="" style="color:white;">Inico</a>
+        <a href="" style="color:white;">Contacto</a>
+        <a href="" style="color:white;">Informacion</a>
+    </nav>
+    <nav style="background-color: blue;">
+        <a href="" style="color:white;">Inico</a>
+        <a href="" style="color:white;">Contacto</a>
+        <a href="" style="color:white;">Informacionnnnnnnnnnnnnnnnnnnnnn</a>
+    </nav>
+    <nav id="nav3" style="background-color: blue;">
+        <a href="" style="color:white;">Inico</a>
+        <a href="" style="color:white;">Contacto</a>
+        <a href="" style="color:white;">Informacion</a>
+    </nav>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolores officia nostrum architecto quibusdam in at, non id asperiores delectus vel est molestias nisi laborum laboriosam corporis, repudiandae omnis? Sunt.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae dolores officia nostrum architecto quibusdam in at, non id asperiores delectus vel est molestias nisi laborum laboriosam corporis, repudiandae omnis? Sunt.</p>
+    <h1 style="display: none;">Titulo</h1>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+    <div class="divEjemplo">
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <a href="">Hola</a>
+        <p>Hola</p>
+        <p>Hola</p>
+    </div>
+</body>
+</html>
