--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <img src="https://img.freepik.com/vector-gratis/diseno-logotipo-servicio-coche_23-2149750702.jpg?size=338&ext=jpg&ga=GA1.1.672697106.1715040000&semt=ais" alt="logo">
+        <img src="" alt="logo">
+         <img src="" alt="logo">
         <h1>Automotores R</h1>
         <nav>
-            <a href="">Inicio</a>
-            <a href="">Contacto</a>
-            <a href="">Informacion</a>
+            <a href="/">Pagina 1</a>
+            <a href="">Pagina 2</a>
+            <a href="">Pagina 3</a>
         </nav>
     </header>
     <main>
